Fix on mobile igniteyouth page

--- a/src/components/styles/mobile/youth.css
+++ b/src/components/styles/mobile/youth.css
@@ -11,7 +11,7 @@
         width: 30%;
     }
 
-    .igniteYouth img {
+    .igniteYouth .igniteTitle img {
         padding-top: 8vh;
         width: 60%;
         margin: auto;
